# Linknote-demo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  linknote.example.json
backend/: .env.example  pyproject.toml
backend/app/: README.md  __init__.py  bootstrap.py  doctor.py  main.py  run_local.py
backend/app/analysis/: __init__.py  gpt_source.py  openai_compatible.py  prompt_builder.py  prompt_templates.py  request_chunker.py  universal_gpt.py
backend/app/config/: __init__.py  builtin_providers.py  settings.py
backend/app/db/: builtin_providers.json
backend/app/downloaders/: __init__.py  base.py  bilibili.py
backend/app/ingest/: __init__.py  clipboard.py  store.py  wechat.py  wechat_paths.py  wechat_refresh.py
backend/app/models/: __init__.py  ingest.py  media.py  note.py  report.py
backend/app/routers/: daily.py  health.py  ingest.py  models.py  providers.py  reports.py  settings.py
backend/app/services/: analysis_preview.py  autostart.py  bilibili_support.py  config_manager.py  daily_runner.py  diagnostics.py  ffmpeg.py  file_io.py  note_chat.py  note_chat_tools.py  note_generation.py  note_markdown.py  note_records.py  note_result_export.py  note_retrieval.py  notifications.py  (+7 more)
backend/tests/: test_bilibili_downloader.py  test_clipboard.py  test_note_chat_tools.py  test_note_generation.py  test_note_markdown.py  test_note_records.py  test_note_result_export.py  test_note_retrieval.py  test_openai_client.py  test_provider_catalog.py  test_provider_model_sync.py  test_report_index.py  test_report_mutations.py  test_scheduler.py  test_wechat.py
(+77 files in other folders)
