[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linknote-backend"
version = "0.1.0"
description = "Backend for LinkNote local note analysis app."
requires-python = ">=3.12"
dependencies = [
  "chromadb>=0.5.0",
  "fastapi>=0.115,<1",
  "faster-whisper>=1.1.1",
  "openai>=1.70,<2",
  "uvicorn>=0.30,<1",
  "yt-dlp>=2025.3.31",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
